[metadata]
name = dspeed
version = attr: dspeed._version.version
description = Fast Digital Signal Processing for particle detectors in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/legend-exp/dspeed
author = Ian Guinn
author_email = iguinn@email.unc.edu
maintainer = The LEGEND Collaboration
license = GPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
packages = find:
install_requires =
    PyWavelets
    colorlog
    h5py>=3.2
    iminuit
    legend-pydataobj~=1.0
    matplotlib
    numba!=0.53.*,!=0.54.*
    parse
    pint
    pyfftw
    tqdm>=4.27
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dspeed = dspeed.cli:dspeed_cli

[options.extras_require]
all =
    dspeed[docs,test]
docs =
    furo
    jupyter
    myst-parser
    nbsphinx
    sphinx
    sphinx-copybutton
    sphinx-inline-tabs
test =
    pre-commit
    pylegendtestdata
    pytest>=6.0
    pytest-cov
    scipy

[flake8]
extend-ignore = E203, E501, D10

[codespell]
ignore-words-list = nin, sav
